--- a/findfriends.html
+++ b/findfriends.html
@@ -153,7 +153,6 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">
-	  <img src="http://i65.tinypic.com/16lbm91.jpg" class="img-responsive margin" style="width:100%" alt="Image">
   </h3>
    <div class="row">
     <div class="col-sm-4">
@@ -161,7 +160,7 @@
     </div>
     <div class="col-sm-4"> 
       <p></p>
-      <!--<img src="https://appstickers-cdn.appadvice.com/1207588875/821021142/ca4307fe39c14df47c504bc1a2d80825-4.png" class="img-responsive margin" style="width:100%" alt="Image">-->
+      <img src="http://i68.tinypic.com/2tr4o.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p></p>
