--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <div class="col-sm-4"> 
       <p></p>
-      <img src="http://i68.tinypic.com/155geub.jpg" class="img-responsive margin" border="0" alt="FRENTEA logo" style="width:50%" alt="Image" >
+      <img src="http://i67.tinypic.com/6ifj89.jpg" class="img-responsive margin" border="0" alt="FRENTEA logo" style="width:50%" alt="Image" >
     </div>
     <div class="col-sm-4"> 
       <p></p>
