--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
     <div class="col-sm-4">
       <p></p>  
     </div>
-    <div class="col-sm-4"> 
+    <div class="col-sm-8"> 
       <p></p>
       <img src="http://i67.tinypic.com/6ifj89.jpg" class="img-responsive margin" border="0" alt="FRENTEA logo" style="width:50%" alt="Image" >
     </div>
-    <div class="col-sm-4"> 
+    <!--div class="col-sm-4"> 
       <p></p>
-    </div>
+    </div-->
   </div>
   <h3>“Always down to spill the tea”</h3>
 </div>
