--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">"FIND BOBA. FIND FRIENDS. FIND BOBA FRIENDS."</h3>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-3">
       <p></p>  
+    </div>
+    <div class="col-sm-6"> 
+      <p></p>
         <img src="http://i67.tinypic.com/6ifj89.jpg" class="img-responsive margin" border="0" alt="FRENTEA logo" style="width:100%" alt="Image" >
     </div>
-    <div class="col-sm-4"> 
+    <div class="col-sm-3"> 
       <p></p>
     </div>
-    <!--div class="col-sm-4"> 
-      <p></p>
-    </div-->
   </div>
   <h3>“Always down to spill the tea”</h3>
 </div>
