--- a/more.html
+++ b/more.html
@@ -89,7 +89,7 @@
         <p></p>
       </div>
     </div>
- <p> Congratulations! You've found the secret page! Ice Bear, is proud of you. Sammi, Jonathan, and Donna don't actually exist. Plot twist: they have been bears in disguise the whole time. </p>
+ <p> Congratulations! You've found the secret page! Ice Bear is proud of you. Sammi, Jonathan, and Donna don't actually exist. Plot twist: they have been bears in disguise the whole time. </p>
 </div>
 
 
@@ -123,7 +123,7 @@
     </div>
     <div class="col-sm-4"> 
       <p></p>
-        <h3 class="margin">Ice Bear, no Chris has taken over this section.</h3><br>
+        <h3 class="margin">Ice Bear -- no Chris has taken over this section.</h3><br>
         <img src="http://i3.kym-cdn.com/photos/images/newsfeed/001/013/373/337.gif" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
