--- a/findtea.html
+++ b/findtea.html
@@ -111,6 +111,20 @@
       <img src="http://i65.tinypic.com/24wy6hj.jpg" style="width:100%" alt="Image">
     </div>
   </div>
+  <div class="row">
+   <div class="col-sm-4">
+     <p>Honey Milk Tea at ShareTea</p>
+      <img src="https://s3-media1.fl.yelpcdn.com/bphoto/6kKwEb1kokA161ugozwuTw/ls.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+   </div>
+   <div class="col-sm-4"> 
+     <p>Liquid Gold at Teaspoon</p>
+     <img src="https://s3-media4.fl.yelpcdn.com/bphoto/ZlUUVCrD0vCochJnmSIIxA/348s.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+   </div>
+   <div class="col-sm-4"> 
+     <p>Thai Milk Tea at Bambu</p>
+     <img src="https://s3-media1.fl.yelpcdn.com/bphoto/xfbKLbZVpv4F6CRVAME--g/348s.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+   </div>
+ </div>
 </div>
 
 <script>
