--- a/findtea.html
+++ b/findtea.html
@@ -111,18 +111,19 @@
       <img src="http://i65.tinypic.com/24wy6hj.jpg" style="width:100%" alt="Image">
     </div>
   </div>
+  <p></p>
   <div class="row">
    <div class="col-sm-4">
-     <p>Honey Milk Tea at ShareTea</p>
-      <img src="https://s3-media1.fl.yelpcdn.com/bphoto/6kKwEb1kokA161ugozwuTw/ls.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+     <p>Potted Plant Milk Tea at TigerTea</p>
+      <img src="http://i67.tinypic.com/2w7lv8o.jpg" class="img-responsive margin" style="width:100%" alt="Image">
    </div>
    <div class="col-sm-4"> 
-     <p>Liquid Gold at Teaspoon</p>
-     <img src="https://s3-media4.fl.yelpcdn.com/bphoto/ZlUUVCrD0vCochJnmSIIxA/348s.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+     <p>Nutella Milk Tea at Plentea</p>
+     <img src="http://i67.tinypic.com/syqfdz.jpg" class="img-responsive margin" style="width:100%" alt="Image">
    </div>
    <div class="col-sm-4"> 
-     <p>Thai Milk Tea at Bambu</p>
-     <img src="https://s3-media1.fl.yelpcdn.com/bphoto/xfbKLbZVpv4F6CRVAME--g/348s.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+     <p>Thai Milk Tea at Never Too Latte</p>
+     <img src="http://i66.tinypic.com/v3pxs1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
    </div>
  </div>
 </div>
