--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
       <div class="col-sm-4">
       </div>
       <div class="col-sm-4"> 
-        <img src= "https://68.media.tumblr.com/13dbf9ecc11320e925cd25f2b8f5877f/tumblr_inline_oodqrwXWLU1tvjluf_500.gif" style="width:100%" alt="Image">
+        <img src= "http://i68.tinypic.com/2qitr9j.jpg" style="width:100%" alt="Image">
       </div>
       <div class="col-sm-4">
       </div>
