--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
 <!-- First Container -->
 <div class="container-fluid bg-1 text-center">
- <h1 class="margin">About Frentea</h1>
+ <h1 class="margin"></h1>
     <div class="row">
       <div class="col-sm-4">
       </div>
