--- a/findfriends.html
+++ b/findfriends.html
@@ -173,16 +173,16 @@
   <h3 class="margin">The Team</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Sammi C</p>
-       <img src="http://i67.tinypic.com/ofdd1w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p></p>
+       <img src="http://i66.tinypic.com/2uqypuo.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Semada Si</p>
-      <img src="http://68.media.tumblr.com/e5c37efdb49c99aa36fe754513ef1df3/tumblr_nuhgg87LsI1uuzjgxo2_500.png" class="img-responsive margin" style="width:100%" alt="Image">
+      <p></p>
+      <img src="http://i64.tinypic.com/2ykfeoy.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Samanthuh See</p>
-      <img src="http://i66.tinypic.com/28kn01w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p></p>
+      <img src="http://i63.tinypic.com/33aq651.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
