--- a/findfriends.html
+++ b/findfriends.html
@@ -170,7 +170,7 @@
   
  <!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">The Team</h3><br>
+  <h3 class="margin"></h3><br>
   <div class="row">
     <div class="col-sm-4">
       <p></p>
