--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 
 <!-- First Container -->
   <div class="container-fluid bg-1 text-center">
-  <img src="http://i66.tinypic.com/20uv3ae.jpg" class="img-responsive img-circle margin" style="display:inline" alt="about" style="width:100%">
+  <img src="http://i67.tinypic.com/25s7769.jpg" class="img-responsive img-circle margin" style="display:inline" alt="about" style="width:100%">
  <p>Hi friends! We've created a website for APCS to find YOU some new friends WHO SHARE YOUR DAMN TEA TASTES. Ever been really vibing with someone when all of a sudden you find out they don't like the same tea as you? Never again with Frentea! We'll be sure to FILTER out all those fake tea friends. </p>  <!--<input type="button" id="btnSearch" value="Search" onclick="GetValue();" />
   <p id="message" ></p> -->
 </div> 
