--- a/findfriends.html
+++ b/findfriends.html
@@ -152,7 +152,19 @@
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
+	<h4 class = "margin"></h4><br>
+	<div class = "row">
+	<div class="col-sm-4">
+      		<p></p>	
+	</div>
+	<div class="col-sm-4"> 
+      		<img src="http://i64.tinypic.com/2ykfeoy.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+    	</div>
+	<div class="col-sm-4"> 
+		<p></p>
+	</div>
 	<img src="http://i68.tinypic.com/2tr4o.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+	</div>
 </div>
   
  <!-- Third Container (Grid) -->
