--- a/findfriends.html
+++ b/findfriends.html
@@ -158,7 +158,7 @@
       		<p></p>	
 	</div>
 	<div class="col-sm-4"> 
-      		<img src="http://i64.tinypic.com/2ykfeoy.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      		<img src="http://i65.tinypic.com/16lbm91.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     	</div>
 	<div class="col-sm-4"> 
 		<p></p>
