--- a/findfriends.html
+++ b/findfriends.html
@@ -172,7 +172,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p></p>
-       <img src="http://i66.tinypic.com/2uqypuo.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+       <img src="http://i63.tinypic.com/28qxojr.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p></p>
