--- a/findfriends.html
+++ b/findfriends.html
@@ -154,13 +154,13 @@
 <div class="container-fluid bg-2 text-center">
 	<h4 class = "margin"></h4><br>
 	<div class = "row">
-	<div class="col-sm-4">
+	<div class="col-sm-3">
       		<p></p>	
 	</div>
-	<div class="col-sm-4"> 
-      		<img src="http://i65.tinypic.com/16lbm91.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+	<div class="col-sm-6"> 
+      		<img src="http://i68.tinypic.com/2tr4o.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     	</div>
-	<div class="col-sm-4"> 
+	<div class="col-sm-3"> 
 		<p></p>
 	</div>
 	</div>
