--- a/findfriends.html
+++ b/findfriends.html
@@ -152,14 +152,15 @@
   
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
+	<h4 class = "margin"></h4><br>
 	<div class = "row">
-	<div class="col-sm-3">
+	<div class="col-sm-4">
       		<p></p>	
 	</div>
-	<div class="col-sm-6"> 
-      		<img src="http://i68.tinypic.com/2tr4o.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+	<div class="col-sm-4"> 
+      		<img src="http://i65.tinypic.com/16lbm91.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     	</div>
-	<div class="col-sm-3"> 
+	<div class="col-sm-4"> 
 		<p></p>
 	</div>
 	</div>
@@ -170,15 +171,15 @@
   <h3 class="margin"></h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p></p>
+      <p>Donuh</p>
        <img src="http://i63.tinypic.com/33aq651.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p></p>
+      <p>Gonuhthen</p>
       <img src="http://i64.tinypic.com/2ykfeoy.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p></p>
+      <p>Semada</p>
       <img src="http://i63.tinypic.com/28qxojr.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
