--- a/findfriends.html
+++ b/findfriends.html
@@ -175,7 +175,7 @@
        <img src="http://i63.tinypic.com/33aq651.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Gonuhthen</p>
+      <p>Jonuhthen</p>
       <img src="http://i64.tinypic.com/2ykfeoy.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
