--- a/findfriends.html
+++ b/findfriends.html
@@ -174,11 +174,11 @@
        <img src="http://i63.tinypic.com/33aq651.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Jonuhthen</p>
-      <img src="http://i64.tinypic.com/2ykfeoy.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Donuh</p>
+      <img src="http://i63.tinypic.com/28qxojr.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Donuh</p>
+      <p>Jonuhthen</p>
       <img src="http://i63.tinypic.com/28qxojr.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
