--- a/findfriends.html
+++ b/findfriends.html
@@ -157,7 +157,7 @@
       		<p></p>	
 	</div>
 	<div class="col-sm-6"> 
-      		<img src="http://i65.tinypic.com/16lbm91.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      		<img src="http://i68.tinypic.com/2tr4o.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     	</div>
 	<div class="col-sm-3"> 
 		<p></p>
