--- a/findfriends.html
+++ b/findfriends.html
@@ -171,7 +171,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Semada</p>
-       <img src="http://i63.tinypic.com/33aq651.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+       <img src="http://i66.tinypic.com/2645gy9.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Donuh</p>
