--- a/more.html
+++ b/more.html
@@ -103,12 +103,12 @@
         <p>Sammi is actually Ice Bear. </p>
     </div>
     <div class="col-sm-4"> 
-      <h4>Backend </h4><p>Donna L</p>
+      <h4>Full Stack </h4><p>Donna L</p>
       <img src="http://i63.tinypic.com/9kmt6w.jpg" class="img-responsive margin" style="width:100%" alt="Image">
       <p>Donna is actually a panda, currently being scratched with weird arms. </p>
     </div>
     <div class="col-sm-4"> 
-      <h4>Full Stack </h4><p>Jonathan C</p>
+      <h4>Backend </h4><p>Jonathan C</p>
       <img src="http://v.cdn.vine.co/r/videos/4BE85DC6BF1241164162244427776_3e0befa2789.4.5.1549606826501848125.mp4.jpg?versionId=sHBZxVUcLDdJYujWthFoMoOBB.ma3zFo" class="img-responsive margin" style="width:100%" alt="Image">
       <p>Jonathan is actually Chris. </p>
     </div>
