--- a/findfriends.html
+++ b/findfriends.html
@@ -175,7 +175,7 @@
     </div>
     <div class="col-sm-4"> 
       <p>Donuh</p>
-      <img src="http://i64.tinypic.com/wr19mw.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <img src="http://i67.tinypic.com/14tlppw.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Jonuhthen</p>
